--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/4. 查看修改日志.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/4. 查看修改日志.md
@@ -15,3 +15,11 @@ a）您需要拥有“数据库设计”模块的权限。
 b）权限由系统管理员在“用户权限中心”系统中配置。
 
 #### 4.24.4.3.2 操作步骤
+
+a）进入数据库设计功能模块，选中需要进行操作的表，单击三个点按钮 > 修改日志，进入“修改日志”页面。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/4-1.png)
+
+##### 图4-1 单击修改日志
+
+b）在“修改日志”页面，单击日志的打开按钮，打开对应版本日志页签。
