--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/5. 删除表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/5. 删除表.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.4 表管理
+
+#### 4.24.4.5 删除表
+
+系统提供该功能，您可以删除指定的数据表。
+
+#### 4.24.4.5.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
