--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/6. 恢复表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/6. 恢复表.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.4 表管理
+
+#### 4.24.4.6 恢复表
+
+本节为您介绍如何恢复已删除的数据库表。
+
+#### 4.24.4.6.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.24.4.6.2 操作步骤
