--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/6. 恢复表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/6. 恢复表.md
@@ -18,12 +18,12 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入数据库设计功能模块，选中需要恢复表所属的模块，单击三个点按钮 > 显示/隐藏已删除表。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/6-1.png)
+![image](https://user-images.githubusercontent.com/79617492/201311314-9809fba2-2fe8-4509-abbb-91463c82baa9.png)
 
 ##### 图6-1 单击显示/隐藏已删除表
 
 b）找到需要恢复的表，单击三个点按钮 > 恢复表即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/4.%20%E8%A1%A8%E7%AE%A1%E7%90%86/6-2.png)
+![image](https://user-images.githubusercontent.com/79617492/201311330-b32d06f0-c935-4c14-a401-c462e864fdfd.png)
 
 ##### 图6-2 单击恢复表
