--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/7. 逆向解析表.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/4. 表管理/7. 逆向解析表.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.4 表管理
+
+#### 4.24.4.7 逆向解析表
+
+逆向解析表，也就是可以将服务器中的数据库表同步到平台的数据库上，若平台数据库中存在该表，则会对该表进行更新；若平台数据库不存在该表，则会在平台数据库中新增该表。
+
+#### 4.24.4.7.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）您已连接数据库，详情请参考《SoFlu（后端）全自动开发平台教程第4.24.2.5节：连接数据库》。
