--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/1. 数据库版本比较.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/1. 数据库版本比较.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.5 数据库版本管理
+
+#### 4.24.5.1 数据库版本比较
+
+在数据库设计中，可以将已提交的数据库版本进行比对，查看版本之间的差异。
+
+#### 4.24.5.1.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.24.5.1.2 操作步骤
+
+a）进入数据库设计功能模块，选中需要操作的数据库，单击三个点符号 > 数据库版本，进入“设计版本管理”页面。
