--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/2. 同步数据库.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/2. 同步数据库.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.5 数据库版本管理
+
+#### 4.24.5.2 同步数据库
+
+同步数据库可以将在平台对数据库表的增删改查操作同步到服务器上的数据库中，在同步表之前，请确保服务器上的数据库空间有剩余，若空间不足将导致同步表失败。
+
+#### 4.24.5.2.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.24.5.2.2 操作步骤
