--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/3. 重建版本线.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/3. 重建版本线.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.5 数据库版本管理
+
+#### 4.24.5.3 重建版本线
+
+重建版本线会清除当前项目的所有数据库版本信息，且该操作不可逆。
+
+#### 4.24.5.3.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
