--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/4. 查看重建记录.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/4. 查看重建记录.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.5 数据库版本管理
+
+#### 4.24.5.4 查看重建记录
+
+查看重建记录，可以查看到数据库版本的历史重建信息，以及详情。
+
+#### 4.24.5.4.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+c）您已经操作过重建版本线，具体详情参考《SoFlu（后端）全自动开发平台教程第4.24.5.3节：重建版本线》。
