--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/5. 导出表DDL脚本信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/5. 导出表DDL脚本信息.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.24 数据库设计
+
+#### 4.24.5 数据库版本管理
+
+#### 4.24.5.5 导出表DDL脚本信息
+
+导出DDL脚本信息，可以导出不同数据库版本中任意数据表的DDL脚本信息。
+
+#### 4.24.5.5.1 前提条件
+
+a）您需要拥有“数据库设计”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.24.5.5.2 操作步骤
