--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/5. 导出表DDL脚本信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/24. 数据库设计/5. 数据库版本管理/5. 导出表DDL脚本信息.md
@@ -18,18 +18,18 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入数据库设计功能模块，选中需要操作的数据库，单击三个点符号 > 数据库版本，进入“设计版本管理”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/5.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%89%88%E6%9C%AC%E7%AE%A1%E7%90%86/5-1.png)
+![image](https://user-images.githubusercontent.com/79617492/201630955-60393341-3fb0-491f-8fee-4e5e192b6155.png)
 
 ##### 图5-1 单击数据库版本
 
 b）找到需要导出的数据库版本，单击导出，进入“DDL脚本导出”页面。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/5.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%89%88%E6%9C%AC%E7%AE%A1%E7%90%86/5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/201630981-a72b563e-5b98-4194-a03d-0280a7634a63.png)
 
 ##### 图5-2 进入“DDL脚本导出”页面
 
 c）选择导出的数据表，并根据实际需求选择需要导出的内容，单击预览按钮，可以看到需要导出的DDL脚本内容，最后单击导出即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/24.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E8%AE%BE%E8%AE%A1/5.%20%E6%95%B0%E6%8D%AE%E5%BA%93%E7%89%88%E6%9C%AC%E7%AE%A1%E7%90%86/5-3.png)
+![image](https://user-images.githubusercontent.com/79617492/201631025-0d78fd0d-c7ac-4ded-94ed-da49caf3827c.png)
 
 ##### 图5-3 看到需要导出的DDL脚本内容
