--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/1. SQL组管理/1. 新增SQL组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/1. SQL组管理/1. 新增SQL组.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.25 SQL管理
+
+#### 4.25.1 SQL组管理
+
+#### 4.25.1.1 新增SQL组
+
+您可以在SQL管理中创建SQL组，通过SQL模块来管理SQL语句信息。
+
+#### 4.25.1.1.1 前提条件
+
+您已创建分布式中间件、嵌入式中间件或数据库中间件的资源实例，三者任选其一即可，具体操作请参考《SoFlu（后端）全自动开发平台教程第15章：资源实例》。
+
+#### 4.25.1.1.2 操作步骤
+
+a）选择项目，进入对应项目的功能模块界面，单击SQL管理功能模块。
