--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/1. SQL组管理/1. 新增SQL组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/1. SQL组管理/1. 新增SQL组.md
@@ -25,3 +25,23 @@ b）系统显示SQL管理页面，单击新增SQL组。
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/1.%20SQL%E7%BB%84%E7%AE%A1%E7%90%86/1-2.png)
 
 ##### 图1-2 单击新增SQL组
+
+c）系统显示新增SQL页面，输入SQL组的相关信息，单击提交即可。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/1.%20SQL%E7%BB%84%E7%AE%A1%E7%90%86/1-3.png)
+
+##### 图1-3 输入SQL组的相关信息
+
+```
+说明：
+
+c1）数据库名称： 非必填，若填写了数据库名称，则中间件指向的数据库无效；若未填写，则根据选择的中间件指向的数据库执行相关SQL语句。
+
+c2）SQL类型： 该SQL组支持的数据库类型，必填项，默认选择mysql数据库，您可以根据实际需要选择其他数据库类型。
+
+c3）中间件： 该SQL组可使用的中间件资源，必填项，可多选，多选后默认使用第一个；支持的中间件类型有分布式、嵌入式和数据库中间件，若在SQL在线调试时选择了路由中间件资源实例，则需同时选中路由中间件内部指向的其它中间件，否则将执行SQL语句异常，无法找到对应的数据库；中间件的更多信息可参考操作指南15资源实例部分。
+
+c4）超时时间： 连接数据库的超时时间，必填项，若在设置的超时时间内，数据库还未连接成功，则数据库连接将会因超时连接失败。
+
+c5）动态字段/表名功能：表示SQL语句中的表名和字段名可通过${变量名}格式来动态获取，使用时将对应的表名和字段名以参数的形式传进来即可。
+```
