--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/1. SQL组管理/4. 复制SQL组.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/1. SQL组管理/4. 复制SQL组.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.25 SQL管理
+
+#### 4.25.1 SQL组管理
+
+#### 4.25.1.4 复制SQL组
+
+通过复制SQL组，您可以快速创建相似配置的SQL组。
+
+#### 4.25.1.4.1 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.25.1.4.2 操作步骤
+
+a）进入SQL管理页面，选择需复制的SQL组，单击编辑图标。
