--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/2. SQL模块管理/1. 新增SQL模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/2. SQL模块管理/1. 新增SQL模块.md
@@ -1,1 +1,15 @@
-test
+### 4. 操作指南
+
+#### 4.25 SQL管理
+
+#### 4.25.2 SQL模块管理
+
+#### 4.25.2.1 新增SQL模块
+
+您可以在SQL组下创建多个SQL模块，来管理SQL语句。
+
+#### 4.25.2.1.1 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
