--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/2. SQL模块管理/1. 新增SQL模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/2. SQL模块管理/1. 新增SQL模块.md
@@ -13,3 +13,19 @@
 a）您需要拥有“SQL管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.25.2.1.2 操作步骤
+
+a）进入SQL管理页面，选中需创建SQL模块的SQL组，单击添加模块。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/2.%20SQL%E6%A8%A1%E5%9D%97%E7%AE%A1%E7%90%86/image.png)
+
+##### 图1-1 单击添加模块
+
+b）系统显示新增SQL模块页面，输入SQL模块的相关信息，单击确定即可。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/2.%20SQL%E6%A8%A1%E5%9D%97%E7%AE%A1%E7%90%86/1-2.png)
+
+##### 图1-2 输入SQL模块的相关信息
+
+c）系统提示“新增成功”，完成新增SQL模块。
