--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/2. SQL模块管理/2. 修改SQL模块.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/2. SQL模块管理/2. 修改SQL模块.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.25 SQL管理
+
+#### 4.25.2 SQL模块管理
+
+#### 4.25.2.2 修改SQL模块
+
+本节为您介绍如何修改SQL模块信息。
+
+#### 4.25.2.2.1 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.25.2.1.2 操作步骤
+
+a）进入SQL管理页面，选中需要修改的SQL模块，单击编辑图标。
