--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
@@ -1,1 +1,19 @@
-test
+### 4. 操作指南
+
+#### 4.25 SQL管理
+
+#### 4.25.3 SQL信息管理
+
+#### 4.25.3.1 新增SQL信息
+
+用户可以新增Select、Update、Delete、Insert、Fragment、StoredProcedure一共6种类型的SQL语句，本节为您介绍如何创建SQL信息。
+
+#### 4.25.3.1.1 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.25.3.1.2 操作步骤
+
+a）进入SQL管理页面，选中需创建SQL信息的SQL模块，单击新增SQL信息。
