--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
@@ -17,3 +17,20 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 #### 4.25.3.1.2 操作步骤
 
 a）进入SQL管理页面，选中需创建SQL信息的SQL模块，单击新增SQL信息。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/image.png)
+
+##### 图1-1 单击新增SQL信息
+
+b）系统显示新增SQL信息页面，输入SQL信息的相关信息，选择SQL类型，然后单击SQL在线调试，如图1-2新增SQL页面。
+
+```
+说明：
+
+b1）SQL内容需要与SQL类型相对应，例如：SQL类型是Select，则在SQL内容输入的SQL必须是Select类型的SQL语句。
+
+b2）只有SQL类型选择Select时，才会显示字段映射配置按钮和进行SQL在线调试。
+
+b3）如果SQL类型选择的是StoredProcedure（存储过程），则输入的SQL内容为调用存储过程的SQL语句。
+
+存储过程SQL返回类型说明：
