--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
@@ -51,3 +51,19 @@ b4）调用存储过程的SQL常用语法：CALL 存储过程名（）或 EXECUT
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-3.png)
 
 ##### 图1-3 调用存储过程SQL语句
+
+c）系统显示SQL在线调试页面，然后单击开始校验。
+
+```
+说明：
+
+c1）中间件只会显示路由中间件的资源实例，可以输入不同的key指向对应的中间件所连接的数据库执行SQL语句，若选择了中间件查询，则SQL语句会根据中间件key指向的数据库执行SQL语句，若选择的中间件key值不存在或不选择中间件，则还是根据SQL组配置的中间件指向的数据库执行SQL语句。
+
+c2）若用路由中间件key查询，则SQL组配置中的中间件必须要同时选择路由中间件key值指向的其它中间件。
+```
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-4.png)
+
+##### 图1-4 SQL在线调试页面
+
+d）查询结果里显示对应查找的SQL数据。
