--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
@@ -67,3 +67,19 @@ c2）若用路由中间件key查询，则SQL组配置中的中间件必须要同
 ##### 图1-4 SQL在线调试页面
 
 d）查询结果里显示对应查找的SQL数据。
+
+```
+说明：
+
+d1）如果查询的表没有数据，则校验的结果为无数据。
+
+d2）如果查询的表有数据，则会展示表的字段及相关的数据信息。
+
+d3）如果出现报错信息，则说明创建的SQL信息有错误，请修改为正确后再执行校验。
+```
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-5.png)
+
+##### 图1-5 显示对应查找的SQL数据
+
+e）单击保存。
