--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/1. 新增SQL信息.md
@@ -18,7 +18,7 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入SQL管理页面，选中需创建SQL信息的SQL模块，单击新增SQL信息。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/image.png)
+![image](https://user-images.githubusercontent.com/79617492/201887743-fcf03089-5e34-4b0b-9603-ab12ea5008cc.png)
 
 ##### 图1-1 单击新增SQL信息
 
@@ -44,11 +44,11 @@ b3-3）返回类型：1-1-1.png表示返回多个结果集。
 b4）调用存储过程的SQL常用语法：CALL 存储过程名（）或 EXECUTE 存储过程名，如图2-2调用存储过程SQL语句。
 ```
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/201887759-4b5592d3-7838-44aa-b5c1-3c63535f21dd.png)
 
 ##### 图1-2 新增SQL页面
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/201887791-cff33302-b1d7-41e5-8692-517d9c97512a.png)
 
 ##### 图1-3 调用存储过程SQL语句
 
@@ -62,7 +62,7 @@ c1）中间件只会显示路由中间件的资源实例，可以输入不同的
 c2）若用路由中间件key查询，则SQL组配置中的中间件必须要同时选择路由中间件key值指向的其它中间件。
 ```
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/201887814-368a5ac5-51ac-46a5-b8a6-79f8742d7b89.png)
 
 ##### 图1-4 SQL在线调试页面
 
@@ -78,13 +78,13 @@ d2）如果查询的表有数据，则会展示表的字段及相关的数据信
 d3）如果出现报错信息，则说明创建的SQL信息有错误，请修改为正确后再执行校验。
 ```
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/201887834-450f01d3-0a6a-4065-8cff-b99cf79d03d1.png)
 
 ##### 图1-5 显示对应查找的SQL数据
 
 e）单击保存。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-6.png)
+![image](https://user-images.githubusercontent.com/79617492/201887865-b56cd92d-ffe5-463b-9efd-63c7b3269e35.png)
 
 ##### 图1-6 单击保存
 
@@ -92,12 +92,12 @@ f）系统弹出字段映射配置页面，单击确定即可。
 
 ##### 说明：字段映射配置页面的映射字段来源于SQL内容中的查询块，系统会自动关联SQL字段映射关系。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-7.png)
+![image](https://user-images.githubusercontent.com/79617492/201887894-d9c07e07-77cc-44fd-be5b-8f3f62249841.png)
 
 ##### 图1-7 单击确定
 
 g）系统提示“新增成功”，完成新增SQL信息。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/1-8.png)
+![image](https://user-images.githubusercontent.com/79617492/201887914-caa08706-8eb4-40a0-a594-569c8c79c25b.png)
 
 ##### 图1-8 完成新增SQL信息
