--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/2. 修改SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/2. 修改SQL信息.md
@@ -18,12 +18,12 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入SQL管理页面，选择需要修改的SQL信息，单击编辑。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/201888242-4bbe60d8-decb-4693-9a63-39180a904610.png)
 
 ##### 图2-1 单击编辑
 
 b）系统显示修改SQL信息页面，修改好SQL信息的相关信息，单击保存即可。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/2-2.png)
+![image](https://user-images.githubusercontent.com/79617492/201888257-e1454d49-e03a-4431-863e-5b0bf7ed5d3f.png)
 
 ##### 图2-2 单击保存
