--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/4. 导入导出SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/4. 导入导出SQL信息.md
@@ -1,1 +1,17 @@
-test
+### 4. 操作指南
+
+#### 4.25 SQL管理
+
+#### 4.25.3 SQL信息管理
+
+#### 4.25.3.4 导入导出SQL信息
+
+(后端)全自动开发平台支持自定义导出项目中的SQL文件，导出的SQL文件可以在任意项目中导入，没有项目和租户限制。
+
+本节为您介绍导入导出SQL信息的具体操作过程及相关注意事项。
+
+#### 4.25.3.4.1 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
