--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/4. 导入导出SQL信息.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/4. 导入导出SQL信息.md
@@ -15,3 +15,23 @@
 a）您需要拥有“SQL管理”模块的权限。
 
 b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.25.3.4.2 前提条件
+
+a）您需要拥有“SQL管理”模块的权限。
+
+b）权限由系统管理员在“用户权限中心”系统中配置。
+
+#### 4.25.3.4.3 步骤引导
+
+a）导出SQL信息。
+
+b）导入SQL信息。
+
+#### 4.25.3.4.3.1 导出SQL信息
+
+a）进入SQL管理功能模块，选中一个SQL组，单击“添加模块”选项右侧的三个点，选择“导出”。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/25.%20SQL%E7%AE%A1%E7%90%86/3.%20SQL%E4%BF%A1%E6%81%AF%E7%AE%A1%E7%90%86/4-1.png)
+
+##### 图4-1 选择“导出”
