--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/5. SQL逻辑标签说明.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/5. SQL逻辑标签说明.md
@@ -1,1 +1,28 @@
-test
+### 4. 操作指南
+
+#### 4.25 SQL管理
+
+#### 4.25.3 SQL信息管理
+
+#### 4.25.3.5 SQL逻辑标签说明
+
+本节为您介绍SQL逻辑标签的使用说明。
+
+##### SQL配置化增加逻辑标签功能的目的就是为了消除在平台开发接口中拼接SQL语句这种很不便于维护的方式，有利于优化产品的功能。
+
+#### 4.25.3.5.1 if 标签
+
+if标签是用来做判断用的，条件成立则会将标签中的内容追加到SQL语句中` where `条件部分，条件不成立则会跳过不追加此处的内容到SQL语句中。
+
+a）test 属性
+
+样例：
+
+```
+<if test="beginTime != null">
+    and createTime &gt;= #{beginTime}
+</if>
+<if test="endTime != null">
+    and createTime &lt;= #{endTime}
+</if>
+```
