--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/5. SQL逻辑标签说明.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/5. SQL逻辑标签说明.md
@@ -26,3 +26,24 @@ a）test 属性
     and createTime &lt;= #{endTime}
 </if>
 ```
+
+##### 说明：test属性中的内容就是ognl表达式，是用来判断表达式是否成立的。
+
+b）direction 属性
+
+样例：
+
+```
+<if test="registerIp != null and registerIp != ''" direction="left">
+      and registerIp like #{registerIp}
+</if>
+```
+
+##### 说明：direction属性是专门为SQL中的like子句定制的，if标签中包含有direction属性则代表此处if标签中的内容是一个like子句，后端程序在处理时就会为参数加上模糊匹配标识符“%”，使用时根据实际情况为direction属性指定合适的值。
+
+```
+  direction属性的值规定有3个，分别是：
+  LEFT   ("left","左匹配")    -> 例如：XXX%
+  RIGHT  ("right","右匹配")   -> 例如：%XXX
+  ALL    ("all","全局匹配")   -> 例如：%XXX%
+```
