--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/5. SQL逻辑标签说明.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/25. SQL管理/3. SQL信息管理/5. SQL逻辑标签说明.md
@@ -47,3 +47,26 @@ b）direction 属性
   RIGHT  ("right","右匹配")   -> 例如：%XXX
   ALL    ("all","全局匹配")   -> 例如：%XXX%
 ```
+
+##### 注意：当direction属性的值为null或空字符串时direction=""，则不会给参数加上模糊匹配符“%”，会将其当做一个普通的if标签来处理（只是替换参数）。
+
+#### 4.25.3.5.2 foreach 标签
+
+foreach标签时专门为` where `条件部分的` in `子句和` not in `子句定制的，其也包含if标签中的test属性用来做判断，只有条件成立时才会处理foreach中的内容并将其追加到SQL当中。
+
+a）test 属性
+
+样例：
+
+```
+<if test="beginTime != null">
+    and createTime &gt;= #{beginTime}
+</if>
+<if test="endTime != null">
+    and createTime &lt;= #{endTime}
+</if>
+```
+
+##### 说明：test属性中的内容就是ognl表达式，是用来判断表达式是否成立的。
+
+b）表达式中的属性
